# CodeReviewAI_ale_test_task

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  github_fetcher.py  main.py  openAI_reviewer.py  pyproject.toml  requirements.txt  test_github_api.py  test_main.http  test_open_ai_api.py
app/: __init__.py  github_fetcher.py  main.py  openAI_reviewer.py  run.py  utils.py
tests/: test_github_fetcher.py  test_main.py  test_reviwer.py  test_utils.py
