[tool.poetry]
name = "codereviewai-ale-test-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
openai = "^1.52.1"
uvicorn = "^0.32.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.run:main"
